--- a/code/app/src/main/res/navigation/nav_graph.xml
+++ b/code/app/src/main/res/navigation/nav_graph.xml
@@ -30,6 +30,10 @@
         android:id="@+id/adminLoginFrag"
         android:name="com.example.theynotlikeus.AdminLoginFrag"
         android:label="fragment_admin_login"
-        tools:layout="@layout/fragment_admin_login" />
+        tools:layout="@layout/fragment_admin_login" >
+        <action
+            android:id="@+id/action_adminLoginFrag_to_loginUserSelectionFrag"
+            app:destination="@id/loginUserSelectionFrag" />
+    </fragment>
 
 </navigation>
