--- a/code/app/src/main/res/layout/activity_login.xml
+++ b/code/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
-        app:navGraph="@navigation/nav_graph"
+        app:navGraph="@navigation/nav_login"
         app:defaultNavHost="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
