--- a/code/app/src/main/res/layout/fragment_user_sign_up.xml
+++ b/code/app/src/main/res/layout/fragment_user_sign_up.xml
@@ -4,10 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AdminLoginFrag">
+    tools:context=".UserLoginFrag">
 
     <!-- TODO: Update blank fragment layout -->
+
+
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="0dp"
         android:layout_height="340dp"
         android:background="@color/black"
@@ -16,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/button_AdminLoginFrag_back"
+            android:id="@+id/button_userSignUpFrag_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
@@ -25,15 +28,20 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <TextView
-        android:id="@+id/textView2"
+    <Button
+        android:id="@+id/button_userSignUpFrag_createandlogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Admin Login Page"
+        android:text="Create Account and Login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
         app:layout_constraintVertical_bias="0.5" />
+
+
+    <!-- back button above -->
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
