Added the username and password field in the xml file of user sign_up_page

--- a/code/app/src/main/res/layout/fragment_user_sign_up.xml
+++ b/code/app/src/main/res/layout/fragment_user_sign_up.xml
@@ -40,6 +40,30 @@
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
         app:layout_constraintVertical_bias="0.5" />
 
+    <EditText
+        android:id="@+id/editText_UserSignUpFrag_username"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="text"
+        android:hint="username"
+        app:layout_constraintBottom_toTopOf="@+id/button_userSignUpFrag_createandlogin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
+
+    <EditText
+        android:id="@+id/editText_UserSignUpFrag_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="password"
+        android:inputType="textPassword"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText_UserSignUpFrag_username" />
+
 
     <!-- back button above -->
 
