--- a/code/app/src/main/res/navigation/nav_home.xml
+++ b/code/app/src/main/res/navigation/nav_home.xml
@@ -31,7 +31,7 @@
 
     <fragment
         android:id="@+id/nav_mood_event"
-        android:name="com.example.theynotlikeus.MoodEventFrag"
+        android:name="com.example.theynotlikeus.MoodEventActivity"
         android:label="mood_event"
         tools:layout="@layout/fragment_mood_event"/>
 
