--- a/code/app/src/main/res/layout/activity_mood_event.xml
+++ b/code/app/src/main/res/layout/activity_mood_event.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/back_button"
         android:src="@drawable/ic_white_back_button"
+        android:background="@color/black_background"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:contentDescription="Select image for mood event"/>
