--- a/code/app/src/main/res/values/colors.xml
+++ b/code/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="primary_blue">#22238B</color>
     <color name="black_background">#212020</color>
     <color name="grey_button">#2F2F2F</color>
+    <color name="text_box_background">#282727</color>
 
 </resources>
