--- a/code/app/src/main/res/layout/activity_mood_event_details.xml
+++ b/code/app/src/main/res/layout/activity_mood_event_details.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraintlayout_activitymoodeventdetails_level1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black_background">
@@ -35,11 +36,11 @@
         android:id="@+id/imagebutton_activitymoodeventdetails_editbutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
         android:background="@android:color/transparent"
         android:maxWidth="40dp"
         android:maxHeight="40dp"
         android:scaleType="fitXY"
-        android:adjustViewBounds="true"
         app:layout_constraintBottom_toBottomOf="@+id/textview_activitymoodeventdetails_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.627"
