--- a/code/app/src/main/res/layout/activity_mood_event.xml
+++ b/code/app/src/main/res/layout/activity_mood_event.xml
@@ -8,7 +8,7 @@
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/back_button"
+        android:id="@+id/button_activitymoodevent_backbutton"
         android:src="@drawable/ic_white_back_button"
         android:background="@color/black_background"
         app:layout_constraintStart_toStartOf="parent"
