--- a/code/app/src/main/res/layout/fragment_home_my_moods.xml
+++ b/code/app/src/main/res/layout/fragment_home_my_moods.xml
@@ -10,12 +10,13 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview_fragmenthomemymoods_userrecyclerview"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -36,12 +37,12 @@
             android:layout_height="50dp"
             android:layout_marginStart="16dp"
             android:background="@android:color/transparent"
-            app:layout_constraintEnd_toStartOf="@+id/imagebutton_activityhomemymoods_hamburgerbutton"
+            app:layout_constraintEnd_toStartOf="@+id/imagebutton_fragmenthomemymoods_hamburgerbutton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
-            android:id="@+id/imagebutton_activityhomemymoods_hamburgerbutton"
+            android:id="@+id/imagebutton_fragmenthomemymoods_hamburgerbutton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
@@ -66,7 +67,7 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/textview_fragmentmoodeventlayout_socialsituation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
