--- a/code/app/src/main/res/layout/fragment_home_my_moods.xml
+++ b/code/app/src/main/res/layout/fragment_home_my_moods.xml
@@ -83,7 +83,7 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/textView_homeMyMoodFrag_welcomeUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
