--- a/code/app/src/main/res/layout/activity_add_mood_event.xml
+++ b/code/app/src/main/res/layout/activity_add_mood_event.xml
@@ -54,6 +54,7 @@
         android:layout_height="50dp"
         android:id="@+id/spinner_activitymoodevent_currentmood"
         android:entries="@array/moods"
+        android:popupBackground="@color/black_background"
         app:layout_constraintTop_toBottomOf="@id/textview_activitymoodevent_selectimagetext"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -63,6 +64,7 @@
         android:layout_height="50dp"
         android:id="@+id/edittext_activitymoodevent_trigger"
         android:hint="Trigger (Optional)"
+        android:textColorHint="@color/white"
         android:textColor="@color/white"
         app:layout_constraintTop_toBottomOf="@id/spinner_activitymoodevent_currentmood"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,6 +75,7 @@
         android:layout_height="50dp"
         android:id="@+id/edittext_activitymoodevent_socialsituation"
         android:hint="Social Situation (Optional)"
+        android:textColorHint="@color/white"
         android:textColor="@color/white"
         app:layout_constraintTop_toBottomOf="@id/edittext_activitymoodevent_trigger"
         app:layout_constraintStart_toStartOf="parent"
@@ -83,6 +86,7 @@
         android:layout_height="50dp"
         android:id="@+id/switch_activitymoodevent_geolocation"
         android:text="Geolocation (Optional)"
+        android:textColor="@color/white"
         app:layout_constraintTop_toBottomOf="@id/edittext_activitymoodevent_socialsituation"
         app:layout_constraintStart_toStartOf="parent"/>
 
