--- a/code/app/src/main/res/layout/activity_admin.xml
+++ b/code/app/src/main/res/layout/activity_admin.xml
@@ -77,7 +77,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Switch
-            android:id="@+id/switch1"
+            android:id="@+id/switch_limit_size"
             android:layout_width="102dp"
             android:layout_height="62dp"
             android:layout_marginEnd="16dp"
