--- a/code/app/src/main/res/layout/activity_edit_delete_mood.xml
+++ b/code/app/src/main/res/layout/activity_edit_delete_mood.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/black_background">
-
 
     <ImageButton
         android:id="@+id/imageButton_DeleteEditMoodActivity_back"
@@ -16,6 +16,7 @@
         android:background="@color/black_background"
         android:contentDescription="Back_button"
         android:src="@drawable/ic_white_back_button"
+        android:translationY="15dp"
         app:layout_constraintEnd_toStartOf="@+id/textView_DeleteEditMoodActivity_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,13 +26,14 @@
         android:layout_width="63dp"
         android:layout_height="57dp"
         android:layout_marginStart="76dp"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="15dp"
         android:adjustViewBounds="true"
         android:contentDescription="delete_button"
         android:maxWidth="100dp"
         android:maxHeight="100dp"
         android:scaleType="fitXY"
         android:src="@drawable/ic_delete_button"
+        android:translationY="10dp"
         app:backgroundTint="@color/black_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView_DeleteEditMoodActivity_title"
@@ -105,7 +107,6 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
-
         android:backgroundTint="#282727"
         android:backgroundTintMode="screen"
         android:entries="@array/moods"
@@ -142,6 +143,7 @@
         app:layout_constraintBottom_toTopOf="@+id/editText_DeleteEditMoodActivity_socialSituationinput"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/editText_DeleteEditMoodActivity_triggerInput" />
+
     <EditText
         android:id="@+id/editText_DeleteEditMoodActivity_socialSituationinput"
         android:layout_width="357dp"
